--- a/env.example
+++ b/env.example
@@ -50,8 +50,8 @@ YF_INTRADAY_PERIOD=60d         # 1h/4h için veri aralığı
 YF_DAILY_PERIOD=2y             # 1d için veri aralığı
 
 # --- Telegram Ayarları ---
-TELEGRAM_BOT_TOKEN=YOUR_BOT_TOKEN_HERE
-TELEGRAM_CHAT_ID=YOUR_CHAT_ID_HERE
+TELEGRAM_BOT_TOKEN=8126426839:AAFUFI5b6Yh53qoq0hlDXDiwtgLKM529hl0
+TELEGRAM_CHAT_ID=-1002965909429
 
 # --- Render.com Ayarları ---
 PORT=8000                      # Health check portu
