--- a/.env
+++ b/.env
@@ -1,56 +1,41 @@
-# === FULL BIST SCANNER CONFIGURATION ===
+# Telegram Ayarları (Zorunlu)
+TELEGRAM_TOKEN="8126426839:AAFUFI5b6Yh53qoq0hlDXDiwtgLKM529hl0"
+TELEGRAM_CHAT_ID="-1002965909429"
 
-# --- Tarama Modu ---
-# BIST_30: BIST 30 endeks hisseleri (30 hisse)
-# BIST_100: BIST 100 endeks hisseleri (100+ hisse) 
-# ALL: Tüm bilinen BIST hisseleri (200+ hisse)
-# CUSTOM: Manuel hisse listesi (TICKERS ile belirt)
-SCAN_MODE=BIST_100
+# Tarama Ayarları (İsteğe Bağlı - Varsayılanlar kodda tanımlıdır)
+# BIST_30, BIST_100, ALL, CUSTOM
+SCAN_MODE="BIST_100" 
 
-# --- Manuel Hisse Listesi (CUSTOM modunda kullanılır) ---
-TICKERS=THYAO,SAHOL,ASTOR,AKBNK,SISE,BIMAS
+# Özel hisse listesi için:
+# CUSTOM_TICKERS="THYAO,SAHOL,EREGL"
 
-# --- Zaman Dilimleri ---
-TIMEFRAMES=1h,4h,1d
+# Zaman dilimleri listesi
+# TIMEFRAMES="1d,4h,1h,15m"
 
-# --- Tarama Aralığı (dakika) ---
-CHECK_EVERY_MIN=15
+# Tarama döngüsü sıklığı (dakika cinsinden)
+# CHECK_EVERY_MIN="15"
 
-# --- Hisse Filtreleri ---
-MIN_PRICE=1.0              # Minimum hisse fiyatı (TL)
-MAX_PRICE=1000.0           # Maximum hisse fiyatı (TL)
-MIN_VOLUME_TRY=1000000     # Minimum günlük hacim (TL)
-MIN_MARKET_CAP_MILLION=100 # Minimum market cap (milyon TL)
+# Fiyat ve Hacim filtreleri
+# MIN_PRICE="1.0"
+# MIN_VOLUME_TRY="1000000"
+# MIN_VOLUME_RATIO="1.5"
 
-# --- RSI Parametreleri ---
-RSI_LEN=22
-RSI_EMA_LEN=66
-PIVOT_PERIOD=10
-ALERT_COOLDOWN_MIN=60
+# RSI Parametreleri
+# RSI_LEN="22"
+# RSI_EMA_LEN="66"
+# PIVOT_PERIOD="10"
 
-# --- Gelişmiş Filtreler ---
-MIN_VOLUME_RATIO=1.5       # Minimum hacim oranı (20 günlük ortalamaya göre)
+# Sinyal soğuma süresi (dakika cinsinden)
+# ALERT_COOLDOWN_MIN="60"
 
-# --- MACD Parametreleri ---
-MACD_FAST=12
-MACD_SLOW=26
-MACD_SIGNAL=9
+# MACD Parametreleri
+# MACD_FAST="12"
+# MACD_SLOW="26"
+# MACD_SIGNAL="9"
 
-# --- Bollinger Bands ---
-BB_PERIOD=20
-BB_MULT=2.0
+# Bollinger Bantları Parametreleri
+# BB_PERIOD="20"
+# BB_MULT="2.0"
 
-# --- Performance Ayarları ---
-MAX_WORKERS=10             # Paralel işlem sayısı
-REQUEST_TIMEOUT=15         # Yahoo Finance timeout (saniye)
-MAX_DATA_POINTS=300        # Memory optimizasyonu için max veri noktası
-
-# --- Telegram Ayarları ---
-TELEGRAM_BOT_TOKEN=8126426839:AAFUFI5b6Yh53qoq0hlDXDiwtgLKM529hl0
-TELEGRAM_CHAT_ID=-1002965909429
-
-# --- Render.com Ayarları ---
-PORT=8000                  # Health check portu
-
-# --- Log Seviyesi ---
-LOG_LEVEL=INFO
+# Mum formasyonu puanlama eşiği
+# CANDLE_FORM_THRESHOLD="0.7"
