--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 # Telegram Ayarları (Zorunlu)
-TELEGRAM_TOKEN="8126426839:AAFUFI5b6Yh53qoq0hlDXDiwtgLKM529hl0"
+TELEGRAM_BOT_TOKEN="8126426839:AAFUFI5b6Yh53qoq0hlDXDiwtgLKM529hl0"
 TELEGRAM_CHAT_ID="-1002965909429"
 
 # Tarama Ayarları (İsteğe Bağlı - Varsayılanlar kodda tanımlıdır)
