--- a/.env
+++ b/.env
@@ -1,41 +1,34 @@
-# Telegram Ayarları (Zorunlu)
+# Telegram Bot API Token'ınız
 TELEGRAM_BOT_TOKEN="8126426839:AAFUFI5b6Yh53qoq0hlDXDiwtgLKM529hl0"
+
+# Telegram sohbet (chat) ID'niz
 TELEGRAM_CHAT_ID="-1002965909429"
 
-# Tarama Ayarları (İsteğe Bağlı - Varsayılanlar kodda tanımlıdır)
-# BIST_30, BIST_100, ALL, CUSTOM
-SCAN_MODE="BIST_100" 
+# Eğer CollectAPI gibi bir servis kullanıyorsanız (bu kodda kullanılmıyor ama yer tutar)
+COLLECTAPI_KEY="3SxnxfKhyEFQ7xzmKfF03F:6L8sRTM78MzwbUCT86IHLa"
 
-# Özel hisse listesi için:
-# CUSTOM_TICKERS="THYAO,SAHOL,EREGL"
+# Tarama Modu
+# ALL: Kodun içindeki ALL_BIST_STOCKS listesini kullanır.
+# CUSTOM: Aşağıdaki CUSTOM_TICKERS listesini kullanır.
+SCAN_MODE="ALL"
 
-# Zaman dilimleri listesi
-# TIMEFRAMES="1d,4h,1h,15m"
+# Eğer SCAN_MODE "CUSTOM" ise, virgülle ayrılmış hisse kodları
+# Örnek: CUSTOM_TICKERS="GARAN,ASELS,THYAO"
+CUSTOM_TICKERS=""
 
-# Tarama döngüsü sıklığı (dakika cinsinden)
-# CHECK_EVERY_MIN="15"
+# Tarama sıklığı (dakika cinsinden)
+CHECK_EVERY_MIN="15"
 
-# Fiyat ve Hacim filtreleri
-# MIN_PRICE="1.0"
-# MIN_VOLUME_TRY="1000000"
-# MIN_VOLUME_RATIO="1.5"
+# Analiz edilecek zaman dilimleri (virgülle ayrılmış)
+# Örnek: TIMEFRAMES="1d,4h,1h,15m"
+TIMEFRAMES="1d,4h,1h,15m"
 
-# RSI Parametreleri
-# RSI_LEN="22"
-# RSI_EMA_LEN="66"
-# PIVOT_PERIOD="10"
+# Hacim ve fiyat filtreleri
+MIN_PRICE="1.0"
+MIN_VOLUME_TRY="1000000"
 
-# Sinyal soğuma süresi (dakika cinsinden)
-# ALERT_COOLDOWN_MIN="60"
+# Gönderilecek sinyalin minimum güç skoru
+MIN_SIGNAL_SCORE="8.0"
 
-# MACD Parametreleri
-# MACD_FAST="12"
-# MACD_SLOW="26"
-# MACD_SIGNAL="9"
-
-# Bollinger Bantları Parametreleri
-# BB_PERIOD="20"
-# BB_MULT="2.0"
-
-# Mum formasyonu puanlama eşiği
-# CANDLE_FORM_THRESHOLD="0.7"
+# Loglama seviyesi (DEBUG, INFO, WARNING, ERROR, CRITICAL)
+LOG_LEVEL="INFO"
