--- a/requirements.txt
+++ b/requirements.txt
@@ -1,18 +1,8 @@
-# Core dependencies
-investpy>=1.0.8
-yfinance>=0.2.37
+aiohttp>=3.8.3
+python-dotenv
 pandas>=2.2.2
 numpy>=1.26.0
-aiohttp>=3.8.3
-
-# Scheduler
-APScheduler>=3.10.4
-
-# Timezone support
-pytz>=2023.3
-
-# Optional: Memory monitoring (will be ignored if not available)
-psutil>=5.9.0
-
-# Graphing
+yfinance>=0.2.37
 matplotlib>=3.5.1
+pytz>=2023.3
+investpy>=1.0.8
