--- a/.env
+++ b/.env
@@ -1,34 +1,44 @@
-# Telegram Bot API Token'ınız
-TELEGRAM_BOT_TOKEN="8126426839:AAFUFI5b6Yh53qoq0hlDXDiwtgLKM529hl0"
+# =================================================================
+#                         BOT AYARLARI
+# =================================================================
 
-# Telegram sohbet (chat) ID'niz
-TELEGRAM_CHAT_ID="-1002965909429"
+# --- Telegram Ayarları ---
+# Botunuzun Telegram ile iletişim kurmasını sağlar.
+TELEGRAM_BOT_TOKEN = "8126426839:AAFUFI5b6Yh53qoq0hlDXDiwtgLKM529hl0"
+TELEGRAM_CHAT_ID = "-1002965909429"
 
-# Eğer CollectAPI gibi bir servis kullanıyorsanız (bu kodda kullanılmıyor ama yer tutar)
-COLLECTAPI_KEY="3SxnxfKhyEFQ7xzmKfF03F:6L8sRTM78MzwbUCT86IHLa"
+# --- API Anahtarları ---
+# Kullanılan veya potansiyel API servislerinin anahtarları.
+# Şu anda kullanılmasa bile gelecekteki değişiklikler için bırakılabilir.
+# NOT: Bu anahtarı kimseyle paylaşmayın.
+COLLECTAPI_KEY = "3SxnxfKhyEFQ7xzmKfF03F:6L8sRTM78MzwbUCT86IHLa"
 
-# Tarama Modu
-# ALL: Kodun içindeki ALL_BIST_STOCKS listesini kullanır.
-# CUSTOM: Aşağıdaki CUSTOM_TICKERS listesini kullanır.
-SCAN_MODE="ALL"
+# --- Tarama ve Sıklık Ayarları ---
+# Botun hangi hisseleri ne sıklıkta tarayacağını belirler.
+# SCAN_MODE: "ALL" (tüm listeyi kullan) veya "CUSTOM" (sadece özel listeyi kullan)
+SCAN_MODE = "ALL"
 
 # Eğer SCAN_MODE "CUSTOM" ise, virgülle ayrılmış hisse kodları
-# Örnek: CUSTOM_TICKERS="GARAN,ASELS,THYAO"
-CUSTOM_TICKERS=""
+CUSTOM_TICKERS = "GARAN,ASELS,THYAO"
 
-# Tarama sıklığı (dakika cinsinden)
-CHECK_EVERY_MIN="15"
+# Tarama sıklığı (dakika cinsinden).
+# Sunucu hatalarını önlemek için 15 dakika ideal bir aralıktır.
+CHECK_EVERY_MIN = "15"
 
-# Analiz edilecek zaman dilimleri (virgülle ayrılmış)
-# Örnek: TIMEFRAMES="1d,4h,1h,15m"
-TIMEFRAMES="1d,4h,1h,15m"
+# --- Filtreleme ve Sinyal Ayarları ---
+# Sinyallerin hangi koşullarda gönderileceğini belirler.
+# Analiz edilecek mum grafiklerinin zaman dilimleri.
+TIMEFRAMES = "1d,4h,1h,15m"
 
-# Hacim ve fiyat filtreleri
-MIN_PRICE="1.0"
-MIN_VOLUME_TRY="1000000"
+# Minimum fiyat (TL) ve işlem hacmi (TL) filtreleri.
+# Düşük değerli ve likit olmayan hisseleri filtreler.
+MIN_PRICE = "1.0"
+MIN_VOLUME_TRY = "1000000"
 
-# Gönderilecek sinyalin minimum güç skoru
-MIN_SIGNAL_SCORE="5.0"
+# Sinyalin minimum güç skoru.
+MIN_SIGNAL_SCORE = "5.0"
 
-# Loglama seviyesi (DEBUG, INFO, WARNING, ERROR, CRITICAL)
-LOG_LEVEL="INFO"
+# --- Loglama Ayarları ---
+# Uygulamanın loglama detay seviyesi.
+# DEBUG, INFO, WARNING, ERROR, CRITICAL
+LOG_LEVEL = "INFO"
