--- a/.env
+++ b/.env
@@ -16,7 +16,7 @@ COLLECTAPI_KEY = "3SxnxfKhyEFQ7xzmKfF03F:6L8sRTM78MzwbUCT86IHLa"
 # --- Tarama ve Sıklık Ayarları ---
 # Botun hangi hisseleri ne sıklıkta tarayacağını belirler.
 # SCAN_MODE: "ALL" (tüm listeyi kullan) veya "CUSTOM" (sadece özel listeyi kullan)
-SCAN_MODE = "ALL"
+SCAN_MODE = "CUSTOM"
 
 # Eğer SCAN_MODE "CUSTOM" ise, virgülle ayrılmış hisse kodları
 CUSTOM_TICKERS = "GARAN,ASELS,THYAO"
