--- a/.env
+++ b/.env
@@ -16,7 +16,7 @@ COLLECTAPI_KEY = "3SxnxfKhyEFQ7xzmKfF03F:6L8sRTM78MzwbUCT86IHLa"
 # --- Tarama ve Sıklık Ayarları ---
 # Botun hangi hisseleri ne sıklıkta tarayacağını belirler.
 # SCAN_MODE: "ALL" (tüm listeyi kullan) veya "CUSTOM" (sadece özel listeyi kullan)
-SCAN_MODE = "CUSTOM"
+SCAN_MODE = "ALL"
 
 # Eğer SCAN_MODE "CUSTOM" ise, virgülle ayrılmış hisse kodları
 CUSTOM_TICKERS = "GARAN,ASELS,THYAO"
@@ -36,7 +36,7 @@ MIN_PRICE = "1.0"
 MIN_VOLUME_TRY = "1000000"
 
 # Sinyalin minimum güç skoru.
-MIN_SIGNAL_SCORE = "1.25"
+MIN_SIGNAL_SCORE = "1.15"
 
 # --- Loglama Ayarları ---
 # Uygulamanın loglama detay seviyesi.
