--- a/.env
+++ b/.env
@@ -7,38 +7,20 @@
 TELEGRAM_BOT_TOKEN = "8126426839:AAFUFI5b6Yh53qoq0hlDXDiwtgLKM529hl0"
 TELEGRAM_CHAT_ID = "-1002965909429"
 
-# --- API Anahtarları ---
-# Kullanılan veya potansiyel API servislerinin anahtarları.
-# Şu anda kullanılmasa bile gelecekteki değişiklikler için bırakılabilir.
-# NOT: Bu anahtarı kimseyle paylaşmayın.
-COLLECTAPI_KEY = "3SxnxfKhyEFQ7xzmKfF03F:6L8sRTM78MzwbUCT86IHLa"
-
-# --- Tarama ve Sıklık Ayarları ---
-# Botun hangi hisseleri ne sıklıkta tarayacağını belirler.
-# SCAN_MODE: "ALL" (tüm listeyi kullan) veya "CUSTOM" (sadece özel listeyi kullan)
+# --- Tarama Modu ---
+# "ALL" = DEFAULT_BIST_TICKERS listesini tara
+# "CUSTOM" = CUSTOM_TICKERS listesini tara
 SCAN_MODE = "ALL"
-
-# Eğer SCAN_MODE "CUSTOM" ise, virgülle ayrılmış hisse kodları
 CUSTOM_TICKERS = "GARAN,ASELS,THYAO"
 
-# Tarama sıklığı (dakika cinsinden).
-# Sunucu hatalarını önlemek için 15 dakika ideal bir aralıktır.
+# --- Zamanlama ve Filtreler ---
 CHECK_EVERY_MIN = "15"
-
-# --- Filtreleme ve Sinyal Ayarları ---
-# Sinyallerin hangi koşullarda gönderileceğini belirler.
-# Analiz edilecek mum grafiklerinin zaman dilimleri.
 TIMEFRAMES = "1d,4h,1h,15m"
 
-# Minimum fiyat (TL) ve işlem hacmi (TL) filtreleri.
-# Düşük değerli ve likit olmayan hisseleri filtreler.
 MIN_PRICE = "1.0"
 MIN_VOLUME_TRY = "1000000"
-
-# Sinyalin minimum güç skoru.
 MIN_SIGNAL_SCORE = "1.15"
 
-# --- Loglama Ayarları ---
-# Uygulamanın loglama detay seviyesi.
-# DEBUG, INFO, WARNING, ERROR, CRITICAL
+# --- Performans & Log ---
 LOG_LEVEL = "INFO"
+CONCURRENT_REQUESTS = "1"
