--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,11 @@
-aiohttp==3.10.5
-python-dotenv==1.0.1
-pandas==2.2.3
-numpy==1.26.4
-yfinance==0.2.40
-matplotlib==3.9.2
-pytz==2024.2
-investpy==1.0.8
-ta==0.11.0
-scipy==1.14.1
-tradingview_ta==3.3.0
+aiohttp
+python-dotenv
+pandas
+numpy
+yfinance
+matplotlib
+pytz
+investpy
+ta
+scipy
+tradingview_ta
