--- a/.env
+++ b/.env
@@ -1,10 +1,18 @@
-TELEGRAM_BOT_TOKEN=your_token_here
-TELEGRAM_CHAT_ID=your_chat_id_here
-CHECK_EVERY_MIN=30
-TIMEFRAMES=1h,1d
-MIN_PRICE=1.0
-MIN_VOLUME_TRY=1000000
-MIN_SIGNAL_SCORE=3.0
-LOG_LEVEL=INFO
-PORT=8080
+# Telegram
+TELEGRAM_BOT_TOKEN=123456:ABC-DEF_your_token_here
+TELEGRAM_CHAT_ID=-1001234567890
+
+# Runtime options
 TEST_MODE=false
+MIN_VOLUME_TRY=1000000
+MIN_SIGNAL_SCORE=2.5
+CONCURRENCY=6
+SIGNAL_COOLDOWN_H=6
+MIN_PRICE=1.0
+
+# App server
+HOST=0.0.0.0
+PORT=8080
+
+# Logging
+LOG_LEVEL=INFO
